corrected some issues

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -6,7 +6,7 @@
 
     
    <div class="lista">
-        {{#each mappedResponse.payload}}
+        {{#each products}}
             <div class="user-info">
                 <span id="userInfo">
                 <h2>{{this.title}}</h2>
