--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,3 +1,5 @@
+<h1>Bienvenido {{user.first_name}}</h1>
+
 <div id="products">
     <header>
         <button><a href={{mappedResponse.prevLink}}>prevLink</a></button>
@@ -18,3 +20,4 @@
     </div>
 
 </div>
+<a href="/auth/logout">Cerrar Sesion</a>
