--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -7,11 +7,11 @@
 <h3>Agregue un producto:</h3>
   <div style="padding: 10px;">
     <label for="title">Title:</label>
-    <input type="text" id="title">
+    <input type="text" id="title" required>
   </div>
   <div style="padding: 10px;">
     <label for="price">Price:</label>
-    <input type="text" id="price">
+    <input type="text" id="price" required>
   </div>
   <!-- 
   <div style="padding: 10px;">
@@ -69,7 +69,7 @@
             <p>{{this.price}}</p>
           </td>
           <td>
-            <p>{{this.id}}</p>
+            <p>{{this._id}}</p>
           </td>
         </tr>   
         {{/each}}
@@ -86,6 +86,7 @@
   <h4 id="messages" style="margin: 10px; padding:10px"></h4>
   </div>
 </div>
+
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
