fixes of practica integradora and finished login.

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,4 +8,10 @@
     <button type="submit">Iniciar Sesion</button>
 </form>
 
+<br>
+<a href="/forgotPassword">Forgot Password</a>
+<br>
+<br>
+<a href="/signup">Registrarme</a>
+
 <script src="/js/login.js"></script>
