--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -15,4 +15,7 @@
     <button type="submit">Crear Usuario</button>
 </form>
 
+<br>
+<a href="/login">Iniciar Sesion</a>
+
 <script src="/js/signup.js"></script>
