--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -7,11 +7,11 @@
 <h3>Agregue un producto:</h3>
   <div style="padding: 10px;">
     <label for="title">Title:</label>
-    <input type="text" id="title">
+    <input type="text" id="title" required>
   </div>
   <div style="padding: 10px;">
     <label for="price">Price:</label>
-    <input type="text" id="price">
+    <input type="text" id="price" required>
   </div>
   <!-- 
   <div style="padding: 10px;">
@@ -89,4 +89,4 @@
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/realTimeProducts.js"></script>
