finished passport and github login + .env file

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,6 +9,11 @@
 </form>
 
 <br>
+<button>
+<a href="/auth/github">Entrar con Github</a>
+</button>
+<br>
+<br>
 <a href="/forgotPassword">Forgot Password</a>
 <br>
 <br>
