--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,55 +1,112 @@
-body{
-    background-color: rgb(227, 236, 215);
-
+body {
+  background-color: rgb(55, 55, 55);
 }
 
 .container {
-    width: 50%;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: darkgray;
-    border-radius: 20px;
+  width: 50%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: darkgray;
+  border-radius: 20px;
 }
 
-.productList{
-    width: 50%;
-    margin: 30px auto;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    background-color: rgb(217, 187, 126);
-    border-radius: 20px;
+.productList {
+  width: 50%;
+  margin: 30px auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: rgb(217, 187, 126);
+  border-radius: 20px;
 }
 
-.chat{
-    width: 60%;
-    margin: 30px auto;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    background-color: rgb(217, 187, 126);
-    border-radius: 20px;
+.chat {
+  width: 60%;
+  margin: 30px auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: rgb(217, 187, 126);
+  border-radius: 20px;
 }
 
 .formularios {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-content: center;
-
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-content: center;
 }
 
 .formularios label {
-    font-size: 20px;     /* Example: Set font size to 16 pixels */
-          /* Example: Set font color to dark grey */
-    line-height: 1.5; 
+  font-size: 20px; /* Example: Set font size to 16 pixels */
+  /* Example: Set font color to dark grey */
+  line-height: 1.5;
 }
 
-.ingProds{
-    display: flex;
-    margin: 0 auto;
-    color:blue;
-    padding: 25px;
+.ingProds {
+  display: flex;
+  margin: 0 auto;
+  color: blue;
+  padding: 25px;
+}
+
+/* products.hanldebars */
+
+#products {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 800px; /* Adjust the width as needed */
+  padding: 20px;
+}
+
+/* Style the header buttons */
+header button {
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+/* Style the product cards */
+.user-info {
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  text-align: left;
+  background-color: #f9f9f9;
+}
+
+.user-info h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.user-info p {
+  font-size: 1rem;
+  color: #666;
+  margin: 0;
+}
+
+.user-info button {
+  background-color: #2ecc71;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+/* Style the "Cerrar Sesion" link */
+a[href="/auth/logout"] {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+  text-decoration: none;
+  color: #e74c3c;
 }
