--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,23 +1,28 @@
 <h1>Bienvenido {{user.first_name}}</h1>
 
-<div id="products">
-    <header>
-        <button><a href={{mappedResponse.prevLink}}>prevLink</a></button>
-        <button><a href={{mappedResponse.nextLink}}>nextLink</a></button>
-    </header>
+<div>
+  <form action="/api/carts" method="POST">
+    <button type="submit">Create Cart</button>
+  </form>
+</div>
 
-    
-   <div class="lista">
-        {{#each products}}
-            <div class="user-info">
-                <span id="userInfo">
-                <h2>{{this.title}}</h2>
-                <p>price: {{this.price}}</p>
-                <button>Add to card</button>
-                </span>
-            </div>
-        {{/each}}
-    </div>
+<div id="products">
+  <header>
+    <button><a href={{response.prevLink}}>prevLink</a></button>
+    <button><a href={{response.nextLink}}>nextLink</a></button>
+  </header>
+
+  <div class="lista">
+    {{#each products}}
+      <div class="user-info">
+        <span id="userInfo">
+          <h2>{{this.title}}</h2>
+          <p>price: {{this.price}}</p>
+          <button>Add to card</button>
+        </span>
+      </div>
+    {{/each}}
+  </div>
 
 </div>
 <a href="/auth/logout">Cerrar Sesion</a>
